--- a/mx-gradle-skel/build.gradle
+++ b/mx-gradle-skel/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api")
     testImplementation("io.micronaut.test:micronaut-test-junit5")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
-	compile project(':Personas')
+    implementation project(':Personas')
 }
 
 test.classpath += configurations.developmentOnly
